--- a/cuisson_sousvide_app/app/src/main/AndroidManifest.xml
+++ b/cuisson_sousvide_app/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".WatchActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".CommandActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
